Fixing whitespace character as a div in browser

--- a/03_diving_deeper_into_css/style.css
+++ b/03_diving_deeper_into_css/style.css
@@ -40,7 +40,7 @@ h1 {
 .main-nav {
     display: inline-block;
     text-align: right;
-    width: calc(100% - 40px);
+    width: calc(100% - 45px);
 }
 
 .main-nav__item {
